src/objects/ExpoAreaMst__c.object
<CustomObject>
    <description>地域情報格納</description>
    <fields>
        <fullName>AreaLst__c</fullName>
        <label>地域</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>G_AreaLst</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CityAll__c</fullName>
        <label>市区郡すべて</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityCode__c</fullName>
        <label>市区郡コード</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>市区郡</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateLst__c</fullName>
        <label>都道府県</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AreaLst__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>G_StateLst</valueSetName>
        </valueSet>
    </fields>
    <label>地域マスタ情報</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>住所コード</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>